[project]
name = "dbspre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "carla>=0.9.16",
    "lxml>=6.1.0",
    "matplotlib>=3.10.9",
    "pandas>=2.0,<3.0",
    "plotly>=6.7.0",
    "psycopg2-binary>=2.9.11",
    "pyproj>=3.0,<3.7",
    "python-dotenv>=1.2.2",
    "shapely>=2.1.2",
    "streamlit>=1.56.0",
    "traci>=1.26.0",
]
